--- a/Asses1_HousePrices.ipynb
+++ b/Asses1_HousePrices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import GradientBoostingRegressor\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +218,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +520,7 @@
        "[8 rows x 38 columns]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +551,7 @@
        "Length: 81, dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +579,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +865,7 @@
        "42    Electrical     1     0.068493"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +951,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,17 +962,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
     "#fill categorical column with most frequent values\n",
-    "object_columns_df = object_columns_df.fillna(object_columns_df.mode().iloc[0])"
+    "for column in object_columns_df.columns:\n",
+    "    lbl = LabelEncoder()\n",
+    "    lbl.fit(list(object_columns_df[column].values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1021,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1405,7 @@
        "[1460 rows x 38 columns]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1410,246 +1413,22 @@
    "source": [
     "#fill numerical column with mean\n",
     "numerical_columns_df = numerical_columns_df.fillna(numerical_columns_df.mean())\n",
-    "\n",
     "numerical_columns_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "#One Hot Encoding\n",
-    "object_columns_df = pd.get_dummies(object_columns_df)"
+    "#object_columns_df = pd.get_dummies(object_columns_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSZoning_C (all)</th>\n",
-       "      <th>MSZoning_FV</th>\n",
-       "      <th>MSZoning_RH</th>\n",
-       "      <th>MSZoning_RL</th>\n",
-       "      <th>MSZoning_RM</th>\n",
-       "      <th>Street_Grvl</th>\n",
-       "      <th>Street_Pave</th>\n",
-       "      <th>LotShape_IR1</th>\n",
-       "      <th>LotShape_IR2</th>\n",
-       "      <th>LotShape_IR3</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SaleType_ConLw</th>\n",
-       "      <th>SaleType_New</th>\n",
-       "      <th>SaleType_Oth</th>\n",
-       "      <th>SaleType_WD</th>\n",
-       "      <th>SaleCondition_Abnorml</th>\n",
-       "      <th>SaleCondition_AdjLand</th>\n",
-       "      <th>SaleCondition_Alloca</th>\n",
-       "      <th>SaleCondition_Family</th>\n",
-       "      <th>SaleCondition_Normal</th>\n",
-       "      <th>SaleCondition_Partial</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 239 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   MSZoning_C (all)  MSZoning_FV  MSZoning_RH  MSZoning_RL  MSZoning_RM  \\\n",
-       "0                 0            0            0            1            0   \n",
-       "1                 0            0            0            1            0   \n",
-       "2                 0            0            0            1            0   \n",
-       "3                 0            0            0            1            0   \n",
-       "4                 0            0            0            1            0   \n",
-       "\n",
-       "   Street_Grvl  Street_Pave  LotShape_IR1  LotShape_IR2  LotShape_IR3  ...  \\\n",
-       "0            0            1             0             0             0  ...   \n",
-       "1            0            1             0             0             0  ...   \n",
-       "2            0            1             1             0             0  ...   \n",
-       "3            0            1             1             0             0  ...   \n",
-       "4            0            1             1             0             0  ...   \n",
-       "\n",
-       "   SaleType_ConLw  SaleType_New  SaleType_Oth  SaleType_WD  \\\n",
-       "0               0             0             0            1   \n",
-       "1               0             0             0            1   \n",
-       "2               0             0             0            1   \n",
-       "3               0             0             0            1   \n",
-       "4               0             0             0            1   \n",
-       "\n",
-       "   SaleCondition_Abnorml  SaleCondition_AdjLand  SaleCondition_Alloca  \\\n",
-       "0                      0                      0                     0   \n",
-       "1                      0                      0                     0   \n",
-       "2                      0                      0                     0   \n",
-       "3                      1                      0                     0   \n",
-       "4                      0                      0                     0   \n",
-       "\n",
-       "   SaleCondition_Family  SaleCondition_Normal  SaleCondition_Partial  \n",
-       "0                     0                     1                      0  \n",
-       "1                     0                     1                      0  \n",
-       "2                     0                     1                      0  \n",
-       "3                     0                     0                      0  \n",
-       "4                     0                     1                      0  \n",
-       "\n",
-       "[5 rows x 239 columns]"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "object_columns_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1667,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1524,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1756,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1766,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1978,7 +1757,7 @@
        "[5 rows x 276 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2002,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -2028,7 +1807,7 @@
        "<Axes: xlabel='SalePrice', ylabel='Density'>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2050,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -2070,7 +1849,7 @@
        "Length: 268, dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2089,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2102,7 +1881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2267,7 @@
        "[1168 rows x 266 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2501,30 +2280,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "539963368.2263442"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[144117.9956153  176534.83097169 108231.32468578 ... 125721.64722631\n",
+      " 158833.12798661 204485.64530492]\n"
+     ]
     }
    ],
    "source": [
     "model = RandomForestRegressor(n_estimators=100, max_depth=5, random_state=1)\n",
     "model.fit(X_train,Y_train)\n",
     "predictions = model.predict(X_train)\n",
-    "mean_squared_error(Y_train, predictions)\n"
+    "print(predictions)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +2311,7 @@
        "0.9094712369170866"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
