--- a/Asses1_HousePrices.ipynb
+++ b/Asses1_HousePrices.ipynb
@@ -240,6 +240,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Preparation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -905,7 +913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spliting numeric and categorical columns"
+    "## Spliting numeric and categorical columns"
    ]
   },
   {
@@ -1367,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filling categorical column with most frequent values"
+    "### Filling categorical column with most frequent values"
    ]
   },
   {
@@ -2241,7 +2249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Combining both numerical and categorical dataframes"
+    "## Combining both numerical and categorical dataframes"
    ]
   },
   {
