--- a/Asses1_HousePrices.ipynb
+++ b/Asses1_HousePrices.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MLG Assignment 2\n",
+    "\n",
+    "Tokelo Jr Qhena (578478)\n",
+    "Rotondwa Nemasetoni (578461)\n",
+    "Riziky Joyce (578695)\n",
+    "Chanelle Van Staden (578509)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
